# self-hosted

./: .envrc  .gitignore  CHANGELOG.md  Makefile  README.md  dz_cluster.yaml  dzi  install.sh  pyproject.toml  test.yaml  user
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  release.yaml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  documentation.yml  feature.yml
.github/scripts/: cleanups-on-ci-failure.sh  dsh-pod-test.sh
.github/workflows/: azure-dsh-testing.yaml  build-kata-ami.yaml  build-ubuntu-kata-ami.yaml  clean-aws-disks.yaml  clean-azure-disks.yaml  clean-gcp-disks.yaml  control-plane-ci.yaml  demo.yaml  dsh-setup.yaml  dsh-testing-2.yaml  dsh-testing.yaml  gcp-dsh-testing.yaml  kata-ami-build.yaml  kernel-build-guest.yml  kernel-build-host.yml  multi-job-DSH-pipeline.yaml  push-helm-charts.yaml  push-services-image.yml  release.yaml
charts/: Makefile  Makefile.common  README.md
charts/dz-control-plane/: Chart.yaml  Makefile  README.md  Readme.md  values.schema.json  (+1 more)
charts/dz-control-plane-crds/: Chart.yaml  values.yaml
charts/dz-control-plane-deps/: Chart.yaml  Makefile  README.md  chart.yaml  cluster_issuer.yaml  timescaledb-secret.yaml  values.yaml
dz/: .env.amd64  .env.arm64  .env.bak  .env.example  .gitignore  docker-compose.old.yml  docker-compose.yml  influxdb.env  run.sh  run.sh.bck
dz_installer/: README.md  constants.py  control_plane.py  data_plane.py  dz_config.py  helpers.py
kata/: README.md  runtimeclass.yaml
keys/: user  user.pub
scripts/: cluster.sh
terraform/: README.md
(+342 files in other folders)
