[project]
name = "self-hosted"
version = "0.1.0"
description = ""
authors = [
    {name = "Devzero",email = "support@devzero.io"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "rich (>=13.9.4,<14.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "sh (>=2.2.1,<3.0.0)",
    "ruamel-yaml (>=0.18.10,<0.19.0)",
    "boto3 (>=1.36.1,<2.0.0)",
    "dotmap (>=1.3.30,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.31.0"

[tool.poetry]
package-mode = false